Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8213

encryption.encryption_force, encryption.encrypt_and_grep fail with valgrind warnings (Invalid read)

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/work-amd64-valgrind/builds/7206/steps/test/logs/stdio

      ==5406== Thread 21:
      ==5406== Invalid read of size 8
      ==5406==    at 0xB4DDC74: ha_innodb::create(char const*, TABLE*, HA_CREATE_INFO*) (ha_innodb.cc:11772)
      ==5406==    by 0x7EC592: handler::ha_create(char const*, TABLE*, HA_CREATE_INFO*) (handler.cc:4326)
      ==5406==    by 0x7EC901: ha_create_table(THD*, char const*, char const*, char const*, HA_CREATE_INFO*, st_mysql_const_unsigned_lex_string*) (handler.cc:4695)
      ==5406==    by 0x6DA73D: rea_create_table(THD*, st_mysql_const_unsigned_lex_string*, char const*, char const*, char const*, HA_CREATE_INFO*, handler*, bool) (unireg.cc:394)
      ==5406==    by 0x6A2785: create_table_impl(THD*, char const*, char const*, char const*, char const*, char const*, DDL_options_st, HA_CREATE_INFO*, Alter_info*, int, bool*, st_key**, unsigned int*, st_mysql_const_unsigned_lex_string*) (sql_table.cc:4805)
      ==5406==    by 0x6A2C0B: mysql_create_table_no_lock(THD*, char const*, char const*, Table_specification_st*, Alter_info*, bool*, int) (sql_table.cc:4921)
      ==5406==    by 0x6A373F: mysql_create_table(THD*, TABLE_LIST*, Table_specification_st*, Alter_info*) (sql_table.cc:4981)
      ==5406==    by 0x6067ED: mysql_execute_command(THD*) (sql_parse.cc:3409)
      ==5406==    by 0x606D92: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:7161)
      ==5406==    by 0x60A069: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1462)
      ==5406==    by 0x60A62B: do_command(THD*) (sql_parse.cc:1090)
      ==5406==    by 0x70126B: do_handle_one_connection(THD*) (sql_connect.cc:1347)
      ==5406==    by 0x701414: handle_one_connection (sql_connect.cc:1258)
      ==5406==    by 0x9D3AB6: pfs_spawn_thread (pfs.cc:1860)
      ==5406==    by 0x4E3506F: start_thread (in /lib64/libpthread-2.9.so)
      ==5406==    by 0x62F913C: clone (in /lib64/libc-2.9.so)
      ==5406==  Address 0x16a69768 is 104 bytes inside a block of size 328 free'd
      ==5406==    at 0x4C257D8: free (vg_replace_malloc.c:446)
      ==5406==    by 0xB488DC5: fil_space_destroy_crypt_data(fil_space_crypt_struct**) (fil0crypt.cc:363)
      ==5406==    by 0xB47B937: fil_space_set_crypt_data(unsigned long, fil_space_crypt_struct*) (fil0fil.cc:7002)
      ==5406==    by 0xB4DDBE8: ha_innodb::create(char const*, TABLE*, HA_CREATE_INFO*) (ha_innodb.cc:11766)
      ==5406==    by 0x7EC592: handler::ha_create(char const*, TABLE*, HA_CREATE_INFO*) (handler.cc:4326)
      ==5406==    by 0x7EC901: ha_create_table(THD*, char const*, char const*, char const*, HA_CREATE_INFO*, st_mysql_const_unsigned_lex_string*) (handler.cc:4695)
      ==5406==    by 0x6DA73D: rea_create_table(THD*, st_mysql_const_unsigned_lex_string*, char const*, char const*, char const*, HA_CREATE_INFO*, handler*, bool) (unireg.cc:394)
      ==5406==    by 0x6A2785: create_table_impl(THD*, char const*, char const*, char const*, char const*, char const*, DDL_options_st, HA_CREATE_INFO*, Alter_info*, int, bool*, st_key**, unsigned int*, st_mysql_const_unsigned_lex_string*) (sql_table.cc:4805)
      ==5406==    by 0x6A2C0B: mysql_create_table_no_lock(THD*, char const*, char const*, Table_specification_st*, Alter_info*, bool*, int) (sql_table.cc:4921)
      ==5406==    by 0x6A373F: mysql_create_table(THD*, TABLE_LIST*, Table_specification_st*, Alter_info*) (sql_table.cc:4981)
      ==5406==    by 0x6067ED: mysql_execute_command(THD*) (sql_parse.cc:3409)
      ==5406==    by 0x606D92: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:7161)
      ==5406==    by 0x60A069: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1462)
      ==5406==    by 0x60A62B: do_command(THD*) (sql_parse.cc:1090)
      ==5406==    by 0x70126B: do_handle_one_connection(THD*) (sql_connect.cc:1347)
      ==5406==    by 0x701414: handle_one_connection (sql_connect.cc:1258)

      10.1 commit 536112dd

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.