MDEV-8213: encryption.encryption_force, encryption.encrypt_and_grep fail with valgrind warnings (Invalid read)

Analysis: Problem was that code used old pointer.

Fixed by using correct pointer.